--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Card Styling -->
     <link rel="stylesheet" href="css/card.css">
 
+    <!-- Header Styling -->
+    <link rel="stylesheet" href="css/header.css">
+
     <!-- Home Page Styling -->
     <link rel="stylesheet" href="css/home.css">
 
@@ -20,6 +23,10 @@
     <header>
         <button id="add-general-list">
             Add New General List
+        </button>
+        
+        <button id="add-ordered-list">
+            Add Ordered List
         </button>
     </header>
 
