--- a/index.html
+++ b/index.html
@@ -24,26 +24,43 @@
         <button id="add-general-list">
             Add New General List
         </button>
-        
+        <div id="main-title">
+            <h2>Productivity Dashboard</h2>
+            <p>Nathaniel Waldschmidt</p>
+        </div>
         <button id="add-ordered-list">
-            Add Ordered List
+            Add New Priority List
         </button>
     </header>
 
     <main>
+        <!-- Template for a <li> item -->
         <template id="template-li-general">
             <li>
                 <div>
                     <input type="checkbox">
                     <label contenteditable>Additional Item</label>
+                    <button class="delete-button">
+                        <span class="material-icons-round">
+                            delete_forever
+                        </span>
+                    </button>
                 </div>
             </li>
         </template>
 
+        <!-- Template for a general list -->
         <template id="template-list-general">
             <div class="card-container general-list">
                 <div>
-                    <h3></h3>
+                    <h3 contenteditable="">
+                        Card Title
+                    </h3>
+                    <button class="edit-button">
+                        <span class="material-icons-round">
+                            edit
+                        </span>
+                    </button>
                     <button class="add-button">
                         <span class="material-icons-round">
                             add
@@ -57,6 +74,25 @@
                 <ul></ul>
             </div>
         </template>
+
+        <!-- Template for a priority list INCOMPLETE-->
+        <template id="template-list-priority">
+            <div class="card-container priority-list">
+                <div>
+                    <h3></h3>
+                    <button class="add-button">
+                        <span class="material-icons-round">
+                            add
+                        </span>
+                    </button>
+                    <h4 class="percent-completed">
+                        0%
+                    </h4>
+                </div>
+
+                <ol></ol>
+            </div>
+        </template>
     </main>
 
     <footer></footer>
@@ -66,6 +102,9 @@
 
 <!-- Adds functionality to Add buttons -->
 <script src="add-general-item.js"></script>
+
+<!-- Adds functionality to Delete buttons -->
+<script src="delete-item.js"></script>
 
 <!-- Adds functionality to Percent Completed Elements -->
 <script src="percent-completed.js"></script>
