Moved a different Javascript function files into more appropriate folders to better organize the file structure.

--- a/index.html
+++ b/index.html
@@ -98,14 +98,17 @@
     <footer></footer>
 </body>
 <!-- Adds functionality to Add General Lists -->
-<script src="add-general-list.js"></script>
+<script src="list-general-functions/add-general-list.js"></script>
 
 <!-- Adds functionality to Add buttons -->
-<script src="add-general-item.js"></script>
+<script src="list-general-functions/add-general-item.js"></script>
 
 <!-- Adds functionality to Delete buttons -->
-<script src="delete-item.js"></script>
+<script src="list-omni-functions/delete-item.js"></script>
 
 <!-- Adds functionality to Percent Completed Elements -->
-<script src="percent-completed.js"></script>
+<script src="list-omni-functions/percent-completed.js"></script>
+
+<!-- Adds functionality to Save Lists -->
+<script src="list-omni-functions/store-lists.js"></script>
 </html>
