--- a/index.html
+++ b/index.html
@@ -31,21 +31,6 @@
     </header>
 
     <main>
-        <!-- Template for a <li> item -->
-        <template id="template-li-general">
-            <li>
-                <div>
-                    <input class="li-checkbox" type="checkbox">
-                    <label class="li-label" contenteditable>Additional Item</label>
-                    <button class="delete-button">
-                        <span class="material-icons-round">
-                            delete_forever
-                        </span>
-                    </button>
-                </div>
-            </li>
-        </template>
-
         <!-- Template for a general list -->
         <template id="template-list-general">
             <div class="card-container general-list">
@@ -71,6 +56,21 @@
                 <ul></ul>
             </div>
         </template>
+
+        <!-- Template for a <li> item -->
+        <template id="template-li-general">
+            <li>
+                <div>
+                    <input class="li-checkbox" type="checkbox">
+                    <label class="li-label" contenteditable>Additional Item</label>
+                    <button class="delete-button" hidden="true">
+                        <span class="material-icons-round">
+                            delete_forever
+                        </span>
+                    </button>
+                </div>
+            </li>
+        </template>
     </main>
 
     <footer></footer>
@@ -80,6 +80,9 @@
 
 <!-- Adds functionality to Add buttons -->
 <script src="list-general-functions/add-general-item.js"></script>
+
+<!-- Adds functionality to Add buttons -->
+<script src="list-omni-functions/edit-list.js"></script>
 
 <!-- Adds functionality to Delete buttons -->
 <script src="list-omni-functions/delete-item.js"></script>
