Fixed a visual bug when editing caused the layout to shift.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div>
                     <input class="li-checkbox" type="checkbox">
                     <label class="li-label" contenteditable>Additional Item</label>
-                    <button class="delete-button" hidden="true">
+                    <button class="delete-button" style="opacity: 0;">
                         <span class="material-icons-round">
                             delete_forever
                         </span>
